--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,10 @@
 body{
   overflow-x:hidden ;
-  background-image:url(img/collage.png) ;
+  background-image:url(img/fondo.jpg) ;
+  background-repeat: no-repeat;
+  background-attachment:fixed;
+  background-size: cover;
+  opacity: .9;
 }
 .spinner-wrapper {
   position: fixed;
