--- a/estilos.css
+++ b/estilos.css
@@ -20,7 +20,7 @@ body{
   justify-content: center;
   align-items: center;
   z-index: 9999;
-  transition: opacity 3.8s;
+  transition: opacity 2s;
 }
 
 .spinner-border {
@@ -89,7 +89,10 @@ body{
         box-sizing: border-box; 
       }
 
-
+.carousel-item{
+min-height: 400px;
+max-width: 100%;
+}
     .carousel-item:nth-child(1) {
   background-image: url('img/mision.jpg');
   background-repeat: no-repeat;
@@ -104,7 +107,7 @@ body{
 }
 
 .carousel-item:nth-child(2) {
-  background-image: url('img/vision.jpg');
+  background-image: url('img/vision.png');
   background-repeat: no-repeat;
   background-size: cover;  
   min-height: 400px;
@@ -150,11 +153,12 @@ body{
         padding: 30px;
         
       }
-.productos-grid, .servicios-grid {
+      .productos-grid, .servicios-grid {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         grid-gap: 20px;
-        padding-bottom: 10px;
+        padding-bottom: 20px;
+        /* Adjust card width and other styles for responsiveness */
       }
 .producto, .servicio {
         background-color: #ffffff; 
